--- a/Note_pitches.ipynb
+++ b/Note_pitches.ipynb
@@ -14,6 +14,7 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn import svm, naive_bayes, neighbors\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import itertools\n",
     "import numpy as np\n",
     "import data_loader as loader"
    ]
@@ -55,7 +56,7 @@
     "def find_k(x_train,y_train, x_test, y_test):\n",
     "    best_acc = 0\n",
     "    k = 0\n",
-    "    for i in range(1,60):\n",
+    "    for i in range(1,30):\n",
     "        k_nn = neighbors.KNeighborsClassifier(n_neighbors=i)\n",
     "        k_nn.fit(x_train, y_train)\n",
     "        acc = k_nn.score(x_test,y_test)\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +80,118 @@
     "    ngrams_train = ngram_vectorizer.fit_transform(x_train)\n",
     "    ngrams_test = ngram_vectorizer.transform(x_test)\n",
     "\n",
-    "    print(\"train shape =\", ngrams_train.shape,len(y_train))\n",
-    "    print(\"test shape =\", ngrams_test.shape,len(y_test))\n",
+    "    print(\"train shape =\", ngrams_train.shape)\n",
+    "    print(\"test shape =\", ngrams_test.shape)\n",
     "    \n",
     "    k = find_k(ngrams_train,y_train,ngrams_test,y_test)\n",
     "    fit(ngrams_train,y_train,ngrams_test,y_test,\n",
-    "         [neighbors.KNeighborsClassifier(n_neighbors=k), naive_bayes.MultinomialNB()])\n",
+    "         [neighbors.KNeighborsClassifier(n_neighbors=k), naive_bayes.MultinomialNB(),svm.LinearSVC(dual=False)])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine(x1,x2,x1_classes):\n",
+    "    result =[]\n",
+    "    for a,b in zip (x1,x2):\n",
+    "        result.append(x1_classes * b + a)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_item(x1,x2,x1_classes):\n",
+    "    return x1_classes * x2 + x1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique_dict(in_list):\n",
+    "    dic = dict.fromkeys(in_list)\n",
+    "    for i,k in enumerate(dic.keys()):\n",
+    "        dic[k]=i\n",
+    "    return dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def values_to_labels(in_list,dic):\n",
+    "    out_list = [dic[x] for x in in_list]\n",
+    "    return out_list        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stringify_items(in_list):\n",
+    "    return [str(x) for x in in_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define known chords\n",
+    "chords_list = ([0], [0,4,7],[0,3,7],[0,5,7],[0,4,8],[0,3,6],[0,4,7,9],[0,3,7,9],\n",
+    "[0,4,7,10],[0,4,7,11],[0,3,7,10],[0,3,6,10],[0,3,6,9],[0,2,4,7,11],\n",
+    "[0,2,4,7,10],[0,1,4,7,10],[0,2,3,7,10])\n",
+    "\n",
+    "# chord_types_list = [tone,major, minor, suspended, augmented, \n",
+    "#                     diminished, major_sixth, minor_sixth, \n",
+    "#                     dominant_seventh, major_seventh, \n",
+    "#                     minor_seventh, half_diminished_seventh, \n",
+    "#                     diminished_seventh, major_ninth, \n",
+    "#                     dominant_ninth, dominant_minor_ninth, minor_ninth]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_chord(in_list):\n",
+    "    root = in_list[0]\n",
+    "    if(len(in_list)==1):\n",
+    "        return root\n",
+    "    costs = []\n",
+    "    for chord in chords_list:\n",
+    "        cost = 0\n",
+    "        for tone_p, tone_ch in itertools.zip_longest(in_list[1:],chord):\n",
+    "            if(tone_p == None or tone_ch == None):\n",
+    "                cost += 3\n",
+    "            else:\n",
+    "                cost+= abs(tone_p - tone_ch)\n",
+    "        costs.append(cost)\n",
+    "    i = list.index(costs,min(costs))\n",
+    "    return combine_item(root,i,12)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -99,104 +200,62 @@
     "%%capture\n",
     "composerNames = [\"debussy\",\"tchaikovsky\",\"mozart\",\"victoria\",\"beethoven\"]\n",
     "#count = min(loader.get_data_counts(composerNames))\n",
-    "x_train, x_test,y_train, y_test = loader.load(\"chords\",composerNames)\n"
+    "x_train_ch, x_test_ch,y_train, y_test = loader.load(\"chords_t\",composerNames)\n",
+    "x_train_d, x_test_d,y_train, y_test = loader.load(\"durations\",composerNames)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'debussy': 119, 'tchaikovsky': 165, 'mozart': 423, 'victoria': 188, 'beethoven': 380} {'debussy': 40, 'tchaikovsky': 54, 'mozart': 124, 'victoria': 61, 'beethoven': 61}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(loader.get_data_counts(y_train,composerNames),loader.get_data_counts(y_test,composerNames))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pitches_train = [str([chord[0] for chord in example])for example in x_train]\n",
-    "pitches_test = [str([chord[0] for chord in example])for example in x_test]"
+    "# x_train = [str([find_chord(chord) for chord in example ]) for example in x_train_ch]\n",
+    "# x_test = [str([find_chord(chord) for chord in example])for example in x_test_ch]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 5, 10, 2, 5, 7, 9, 4, 12, 9, 4, 12, 10, 2, 7, 10, 2, 4, 5, 12, 9, 5, 12, 9, 7, 10, 2, 2, 2, 7, 10, 7, 10, 5, 10, 2, 2, 2, 7, 10, 2, 10, 4, 10, 2, 2, 2, 7, 10, 7, 10, 2, 10, 5, 10, 5, 10, 2, 10, 12, 7, 10, 10, 2, 4, 7, 10, 2, 4, 10, 2, 9, 12, 7, 10, 5, 12, 5, 5, 7, 9, 2, 5, 12, 12, 9, 2, 9, 5, 12, 12, 7, 9, 5, 5, 2, 9, 4, 5, 9, 2, 9, 2, 5, 2, 12, 5, 12, 5, 5, 7, 9, 2, 5, 12, 12, 9, 2, 9, 5, 12, 12, 7, 9, 5, 5, 2, 9, 4, 5, 9, 2, 9, 2, 5, 2, 12, 7, 10, 2, 12, 2, 5, 7, 2, 10, 5, 7, 4, 5, 5, 2, 2, 9, 2, 9, 5, 9, 12, 9, 5, 5, 2, 4, 10, 2, 5, 4, 5, 7, 10, 5, 2, 9, 10, 7, 7, 9, 5, 5, 11, 5, 2, 9, 2, 2, 7, 11, 11, 2, 5, 11, 9, 5, 11, 5, 2, 9, 7, 2, 2, 5, 5, 11, 2, 9, 11, 5, 9, 7, 2, 9, 2, 7, 11, 7, 5, 9, 11, 5, 9, 7, 2, 9, 2, 7, 7, 11, 9, 5, 10, 2, 5, 10, 2, 5, 7, 9, 4, 12, 9, 4, 12, 7, 10, 2, 7, 10, 2, 4, 5, 12, 9, 5, 12, 9, 4, 8, 2, 4, 11, 4, 2, 5, 9, 2, 5, 9, 12, 5, 12, 2, 4, 8, 2, 4, 11, 4, 2, 4, 5, 10, 2, 2, 5, 9, 2, 9, 10, 12, 4, 10, 12, 7, 12, 10, 12, 2, 7, 10, 10, 2, 5, 10, 5, 7, 9, 1, 7, 9, 4, 9, 7, 2, 10, 7, 2, 10, 5, 5, 9, 10, 7, 7, 4, 1, 7, 9, 9, 4, 9, 7, 12, 7, 7, 10, 10, 3, 10, 2, 7, 5, 12, 5, 9, 3, 9, 5, 12, 7, 7, 10, 10, 2, 3, 5, 10, 3, 7, 9, 12, 5, 9, 7, 3, 9, 5, 5, 12, 5, 3, 7, 9, 12, 2, 10, 10, 5, 8, 10, 10, 12, 10, 5, 8, 10, 12, 10, 2, 8, 10, 2, 5, 2, 7, 3, 10, 10, 7, 12, 2, 12, 10, 12, 2, 12, 10, 7, 2, 12, 12, 7, 7, 10, 10, 4, 12, 4, 12, 9, 9, 9, 5, 9, 12, 5, 12, 5, 2, 10, 7, 7, 2, 5, 7, 10, 2, 5, 7, 10, 9, 7, 2, 10, 5, 7, 9, 4, 10, 2, 2, 10, 7, 7, 2, 5, 7, 10, 2, 5, 7, 10, 9, 7, 2, 10, 5, 10, 7, 2, 5, 12, 9, 7, 4, 7, 2, 10, 5, 9, 4, 12, 12, 7, 10, 5, 2, 7, 9, 12, 7, 4, 10, 10, 2, 9, 5, 12, 12, 4, 10, 7, 4, 2, 5, 12, 9, 7, 4, 7, 2, 10, 10, 5, 9, 4, 12, 12, 7, 10, 7, 9, 5, 5, 12, 5, 5, 9, 12, 5, 9, 5, 5, 5, 10, 7, 12, 3, 2, 5, 2, 3, 2, 12, 12, 9, 5, 2, 7, 7, 4, 7, 12, 9, 7, 9, 5, 5, 12, 7, 7, 9, 5, 5, 10, 7, 10, 10, 9, 10, 10, 9, 12, 10, 7, 5, 10, 7, 12, 3, 2, 5, 2, 3, 2, 12, 12, 9, 6, 2, 10, 5, 7, 7, 12, 4, 7, 7, 2, 4, 9, 12, 5, 5, 12, 10, 7, 10, 12, 5, 10, 5, 9, 5, 5, 3, 7, 10, 2, 7, 12, 10, 9, 12, 3, 7, 5, 5, 3, 2, 5, 9, 12, 10, 10, 9, 7, 10, 2, 5, 3, 3, 2, 12, 3, 7, 10, 12, 12, 12, 9, 7, 9, 5, 5, 7, 10, 10, 5, 3, 5, 2, 3, 10, 7, 2, 5, 12, 3, 10, 2, 3, 7, 10, 2, 7, 12, 10, 9, 12, 3, 7, 5, 5, 3, 2, 5, 9, 12, 10, 10, 9, 7, 10, 2, 5, 3, 3, 2, 12, 3, 7, 10, 12, 12, 12, 9, 7, 9, 12, 3, 7, 10, 3, 12, 12, 9, 7, 9, 5, 9, 3, 5, 3, 5, 2, 7, 7, 12, 12, 6, 9, 2, 10, 5, 10, 7, 4, 12, 9, 7, 9, 5, 5, 12, 7, 7, 9, 5, 5, 10, 7, 10, 10, 9, 10, 10, 9, 12, 10, 7, 10, 7, 12, 3, 2, 10, 10, 2, 3, 2, 12, 9, 12, 6, 2, 10, 5, 7, 9, 4, 12, 7, 7, 2, 4, 9, 12, 5, 5, 12, 10, 7, 10, 12, 5, 10, 5, 5, 5, 5, 8, 8, 5, 6, 8, 10, 6, 3, 6, 1, 10, 8, 6, 1, 10, 3, 6, 6, 10, 8, 5, 10, 6, 3, 6, 12, 6, 8, 8, 3, 6, 6, 8, 12, 3, 6, 8, 5, 6, 8, 1, 5, 10, 3, 5, 11, 6, 10, 8, 8, 5, 6, 8, 1, 5, 8, 9, 9, 5, 1, 9, 1, 5, 2, 9, 5, 4, 10, 2, 5, 10, 2, 5, 7, 9, 4, 12, 9, 4, 12, 7, 10, 2, 7, 10, 2, 4, 5, 12, 9, 5, 12, 9, 7, 10, 2, 2, 2, 7, 10, 7, 10, 5, 10, 2, 2, 2, 7, 10, 2, 10, 4, 10, 2, 2, 2, 7, 10, 7, 10, 2, 10, 5, 10, 5, 10, 2, 12, 7, 10, 10, 2, 4, 7, 10, 2, 4, 10, 2, 9, 12, 7, 10, 5, 12, 5, 5, 7, 9, 2, 5, 12, 12, 9, 2, 9, 5, 12, 12, 7, 9, 5, 5, 2, 9, 4, 5, 9, 2, 9, 2, 5, 2, 12, 5, 12, 5, 5, 7, 9, 2, 5, 12, 12, 9, 2, 9, 5, 12, 12, 7, 9, 5, 5, 2, 9, 4, 5, 9, 2, 9, 2, 5, 2, 12, 7, 10, 2, 12, 2, 5, 7, 2, 10, 5, 7, 4, 5, 5, 2, 2, 9, 2, 9, 5, 9, 12, 9, 5, 5, 2, 4, 10, 2, 5, 4, 5, 7, 10, 5, 2, 9, 10, 7, 7, 9, 5, 5, 11, 5, 2, 9, 2, 2, 7, 11, 11, 2, 5, 11, 9, 5, 11, 5, 2, 9, 7, 2, 2, 5, 5, 11, 2, 9, 11, 5, 9, 7, 2, 9, 2, 7, 11, 7, 5, 9, 11, 5, 9, 7, 2, 9, 2, 7, 7, 11, 9, 5, 10, 2, 5, 10, 2, 5, 7, 9, 4, 12, 9, 4, 12, 7, 10, 2, 7, 10, 2, 4, 5, 12, 9, 5, 12, 9, 10, 2, 5, 10, 12, 5, 2, 10, 2, 5, 10, 12, 4, 9, 9, 10, 4, 12, 9, 7, 4, 7, 2, 10, 2, 7, 7, 10, 7, 2, 12, 9, 12, 5, 5, 9, 5, 12, 5, 7, 10, 3, 3, 5, 10, 7, 3, 7, 10, 3, 5, 9, 2, 2, 3, 9, 5, 2, 2, 9, 2, 7, 3, 7, 12, 12, 3, 12, 7, 5, 2, 5, 10, 10, 2, 10, 5, 10, 3, 12, 6, 9, 9, 10, 12, 9, 9, 6, 2, 2, 10, 2, 10, 7, 7, 10, 7, 2, 7, 12, 9, 12, 5, 5, 7, 9, 5, 5, 12, 10, 7, 2, 5, 7, 10, 12, 2, 5, 10, 12, 10, 2, 5, 10, 12, 2, 5, 2, 12, 10, 5, 2, 12, 10, 5, 9, 12, 12, 4, 9, 12, 4, 9, 12, 4, 9, 12, 12, 7, 12, 12, 4, 10, 12, 4, 10, 12, 4, 10, 12, 12, 5, 5, 12, 5, 5, 7, 9, 2, 5, 12, 12, 9, 2, 9, 5, 12, 12, 7, 9, 5, 5, 2, 9, 4, 5, 9, 2, 9, 2, 5, 2, 12, 5, 12, 5, 5, 7, 9, 2, 5, 12, 12, 9, 2, 9, 5, 12, 12, 7, 9, 5, 5, 2, 9, 4, 5, 9, 2, 9, 2, 5, 2, 5, 12, 5, 12, 2, 9, 5, 5, 12, 9, 7, 2, 5, 12, 5, 12, 2, 9, 5, 5, 12, 9, 7, 2, 5, 12, 5, 12, 2, 9, 5, 5, 12, 9, 7, 2, 5, 5, 5, 5, 5, 5, 5, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(pitches_train[0])"
+    "x_train = [str([chord[0] for chord in example ]) for example in x_train_ch]\n",
+    "x_test = [str([chord[0] for chord in example]) for example in x_test_ch]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n = 1\n",
-      "train shape = (1275, 30) 1275\n",
-      "test shape = (340, 30) 340\n",
-      "best k = 23, best acc = 0.5970588235294118\n",
-      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=23, p=2,\n",
-      "           weights='uniform')\n",
-      "acc: 0.5970588235294118 \n",
-      "\n",
-      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.5323529411764706 \n",
-      "\n",
-      "n = 2\n",
-      "train shape = (1275, 238) 1275\n",
-      "test shape = (340, 238) 340\n",
-      "best k = 18, best acc = 0.6088235294117647\n",
-      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=18, p=2,\n",
-      "           weights='uniform')\n",
-      "acc: 0.6088235294117647 \n",
-      "\n",
-      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.5411764705882353 \n",
-      "\n",
-      "n = 3\n",
-      "train shape = (1275, 1385) 1275\n",
-      "test shape = (340, 1385) 340\n",
-      "best k = 16, best acc = 0.6235294117647059\n",
-      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=16, p=2,\n",
-      "           weights='uniform')\n",
-      "acc: 0.6235294117647059 \n",
-      "\n",
-      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.538235294117647 \n",
-      "\n"
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-5b19b78b04b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpitches_seq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_iterable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train_ch\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mx_test_ch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpitches_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0munique_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitches_seq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mx_train_ch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mvalues_to_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexample\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpitches_dict\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mexample\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_train_ch\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mx_test_ch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mvalues_to_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexample\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpitches_dict\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mexample\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_test_ch\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-7-70cb4bc42b37>\u001b[0m in \u001b[0;36munique_dict\u001b[1;34m(in_list)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0munique_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0min_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mdic\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0min_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mdic\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
    ],
    "source": [
-    "for n in range(1,4):\n",
-    "    fit_ngrams(pitches_train,y_train,pitches_test,y_test,n)"
+    "# pitches_seq = list(itertools.chain.from_iterable(x_train_ch+x_test_ch))\n",
+    "# pitches_dict = unique_dict(pitches_seq)\n",
+    "\n",
+    "# x_train_ch = [values_to_labels(example,pitches_dict) for example in x_train_ch]\n",
+    "# x_test_ch = [values_to_labels(example,pitches_dict) for example in x_test_ch]\n",
+    "\n",
+    "# durations_seq = list(itertools.chain.from_iterable(x_train_d+x_test_d))\n",
+    "# durations_dict = unique_dict(durations_seq)\n",
+    "\n",
+    "# x_train_d = [values_to_labels(example,durations_dict) for example in x_train_d]\n",
+    "# x_test_d = [values_to_labels(example,durations_dict) for example in x_test_d]"
    ]
   },
   {
@@ -205,14 +264,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigram_vectorizer = CountVectorizer(token_pattern=\"\\d+\", ngram_range=(1,3))\n",
-    "bigrams_train = bigram_vectorizer.fit_transform(pitches_train)\n",
-    "bigrams_test = bigram_vectorizer.fit_transform(pitches_test)\n",
+    "# x_train = list(map(str, combine(x_train_ch,x_train_d,len(pitches_dict))))\n",
+    "# x_test = list(map(str, combine(x_test_ch,x_test_d,len(pitches_dict))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(loader.get_data_counts(y_train,composerNames),loader.get_data_counts(y_test,composerNames))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,y_train = loader.shuffle_data(x_train,y_train)\n",
+    "x_test,y_test = loader.shuffle_data(x_test,y_test)\n",
     "\n",
-    "print(bigrams_train.shape)\n",
-    "k = find_k(bigrams_train,y_train,bigrams_test,y_test)\n",
-    "fit(bigrams_train,y_train,bigrams_test,y_test,\n",
-    "     [neighbors.KNeighborsClassifier(n_neighbors=k), naive_bayes.MultinomialNB()])"
+    "for n in range(1,5):\n",
+    "    fit_ngrams(x_train,y_train,x_test,y_test,n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x,files = loader.load_folder(\"midis\",\"chords\")"
    ]
   },
   {
