--- a/Note_pitches.ipynb
+++ b/Note_pitches.ipynb
@@ -2,34 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "qhXdKqfi80Dt"
    },
    "outputs": [],
    "source": [
+    "import itertools\n",
+    "import pickle\n",
+    "import numpy as np\n",
     "from music21 import *\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn import svm, naive_bayes, neighbors\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import itertools\n",
-    "import numpy as np\n",
-    "import data_loader as loader"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Loading unprocessed data"
+    "\n",
+    "import data_loader as loader\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -50,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +86,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ngrams_vectorize(x_train,x_test,n):\n",
+    "    print(\"n =\",n)\n",
+    "    \n",
+    "    ngram_vectorizer = CountVectorizer(token_pattern=\"\\d+\", ngram_range=(1, n))\n",
+    "    ngrams_train = ngram_vectorizer.fit_transform(x_train)\n",
+    "    ngrams_test = ngram_vectorizer.transform(x_test)\n",
+    "\n",
+    "    print(\"train shape =\", ngrams_train.shape)\n",
+    "    print(\"test shape =\", ngrams_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +202,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading unprocessed data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -208,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,24 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-5b19b78b04b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpitches_seq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitertools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_iterable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train_ch\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mx_test_ch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpitches_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0munique_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpitches_seq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mx_train_ch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mvalues_to_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexample\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpitches_dict\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mexample\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_train_ch\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mx_test_ch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mvalues_to_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexample\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpitches_dict\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mexample\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_test_ch\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-7-70cb4bc42b37>\u001b[0m in \u001b[0;36munique_dict\u001b[1;34m(in_list)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0munique_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0min_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mdic\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0min_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdic\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mdic\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# pitches_seq = list(itertools.chain.from_iterable(x_train_ch+x_test_ch))\n",
     "# pitches_dict = unique_dict(pitches_seq)\n",
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,18 +274,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'debussy': 119, 'tchaikovsky': 165, 'mozart': 423, 'victoria': 188, 'beethoven': 380} {'debussy': 40, 'tchaikovsky': 54, 'mozart': 124, 'victoria': 61, 'beethoven': 61}\n"
+     ]
+    }
+   ],
    "source": [
     "print(loader.get_data_counts(y_train,composerNames),loader.get_data_counts(y_test,composerNames))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Testing model performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 1\n",
+      "train shape = (1275, 12)\n",
+      "test shape = (340, 12)\n",
+      "best k = 6, best acc = 0.65\n",
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=6, p=2,\n",
+      "           weights='uniform')\n",
+      "acc: 0.65 \n",
+      "\n",
+      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
+      "acc: 0.6 \n",
+      "\n",
+      "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+      "     verbose=0)\n",
+      "acc: 0.6529411764705882 \n",
+      "\n",
+      "n = 2\n",
+      "train shape = (1275, 156)\n",
+      "test shape = (340, 156)\n",
+      "best k = 2, best acc = 0.7176470588235294\n",
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
+      "           weights='uniform')\n",
+      "acc: 0.7176470588235294 \n",
+      "\n",
+      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
+      "acc: 0.6588235294117647 \n",
+      "\n",
+      "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+      "     verbose=0)\n",
+      "acc: 0.7323529411764705 \n",
+      "\n",
+      "n = 3\n",
+      "train shape = (1275, 1884)\n",
+      "test shape = (340, 1884)\n",
+      "best k = 2, best acc = 0.7176470588235294\n",
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
+      "           weights='uniform')\n",
+      "acc: 0.7176470588235294 \n",
+      "\n",
+      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
+      "acc: 0.7147058823529412 \n",
+      "\n",
+      "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+      "     verbose=0)\n",
+      "acc: 0.75 \n",
+      "\n",
+      "n = 4\n",
+      "train shape = (1275, 22598)\n",
+      "test shape = (340, 22598)\n",
+      "best k = 1, best acc = 0.7147058823529412\n",
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=1, p=2,\n",
+      "           weights='uniform')\n",
+      "acc: 0.7147058823529412 \n",
+      "\n",
+      "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
+      "acc: 0.7558823529411764 \n",
+      "\n",
+      "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+      "     verbose=0)\n",
+      "acc: 0.7852941176470588 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "x_train,y_train = loader.shuffle_data(x_train,y_train)\n",
     "x_test,y_test = loader.shuffle_data(x_test,y_test)\n",
@@ -296,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing"
+    "# Saving a model"
    ]
   },
   {
@@ -304,8 +400,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] Systém nemůže nalézt uvedenou cestu: 'C:\\\\Users\\\\jiriv\\\\Documents\\\\ROP\\\\NotationClassifier\\\\midis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-b20b5788973c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_folder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"midis\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"chords\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Documents\\ROP\\NotationClassifier\\data_loader.py\u001b[0m in \u001b[0;36mload_folder\u001b[1;34m(folder, dataset)\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mfolder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     paths = [os.path.join(folder, f) for f in os.listdir(\n\u001b[1;32m---> 36\u001b[1;33m         folder) if f.endswith(\".mxl\") or f.endswith(\".mid\")]\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Systém nemůže nalézt uvedenou cestu: 'C:\\\\Users\\\\jiriv\\\\Documents\\\\ROP\\\\NotationClassifier\\\\midis'"
+     ]
+    }
+   ],
    "source": [
-    "x,files = loader.load_folder(\"midis\",\"chords\")"
+    "\n",
+    "# x,files = loader.load_folder(\"midis\",\"chords\")"
    ]
   },
   {
@@ -322,13 +439,13 @@
    },
    "outputs": [],
    "source": [
-    "classes = list(set(y_test))\n",
-    "test_data = list(zip(x_test,y_test))\n",
-    "for label in classes:\n",
-    "    label_data = [tupple[0] for tupple in test_data if tupple[1] == label][:10]\n",
-    "    plt.plot(label_data)\n",
-    "    plt.xlabel(\"Examples\")\n",
-    "    plt.show()"
+    "# classes = list(set(y_test))\n",
+    "# test_data = list(zip(x_test,y_test))\n",
+    "# for label in classes:\n",
+    "#     label_data = [tupple[0] for tupple in test_data if tupple[1] == label][:10]\n",
+    "#     plt.plot(label_data)\n",
+    "#     plt.xlabel(\"Examples\")\n",
+    "#     plt.show()"
    ]
   }
  ],
@@ -355,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
