classifier.py work

--- a/Note_pitches.ipynb
+++ b/Note_pitches.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "qhXdKqfi80Dt"
    },
    "outputs": [],
@@ -23,13 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 87
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "RPWbGTiA2g3_",
     "outputId": "2fbf29aa-2f20-4fed-98a4-91796b0a466f"
    },
@@ -44,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def find_k(x_train,y_train, x_test, y_test):\n",
@@ -64,19 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def fit_ngrams(x_train,y_train,x_test,y_test,n):\n",
-    "    print(\"n =\",n)\n",
-    "    \n",
-    "    ngram_vectorizer = CountVectorizer(token_pattern=\"\\d+\", ngram_range=(1, n))\n",
-    "    ngrams_train = ngram_vectorizer.fit_transform(x_train)\n",
-    "    ngrams_test = ngram_vectorizer.transform(x_test)\n",
-    "\n",
-    "    print(\"train shape =\", ngrams_train.shape)\n",
-    "    print(\"test shape =\", ngrams_test.shape)\n",
+    "def fit_ngrams(x_train,y_train,x_test,y_test,n):    \n",
+    "    ngrams_train, ngrams_test = ngrams_vectorize(x_train, x_test,n)\n",
     "    \n",
     "    k = find_k(ngrams_train,y_train,ngrams_test,y_test)\n",
     "    fit(ngrams_train,y_train,ngrams_test,y_test,\n",
@@ -86,8 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ngrams_vectorize(x_train,x_test,n):\n",
@@ -98,13 +99,17 @@
     "    ngrams_test = ngram_vectorizer.transform(x_test)\n",
     "\n",
     "    print(\"train shape =\", ngrams_train.shape)\n",
-    "    print(\"test shape =\", ngrams_test.shape)"
+    "    print(\"test shape =\", ngrams_test.shape)\n",
+    "    \n",
+    "    return ngrams_train, ngrams_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def combine(x1,x2,x1_classes):\n",
@@ -116,8 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def combine_item(x1,x2,x1_classes):\n",
@@ -126,8 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def unique_dict(in_list):\n",
@@ -139,8 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def values_to_labels(in_list,dic):\n",
@@ -150,8 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def stringify_items(in_list):\n",
@@ -160,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define known chords\n",
@@ -179,8 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def find_chord(in_list):\n",
@@ -210,33 +227,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "%%capture\n",
     "composerNames = [\"debussy\",\"tchaikovsky\",\"mozart\",\"victoria\",\"beethoven\"]\n",
     "#count = min(loader.get_data_counts(composerNames))\n",
-    "x_train_ch, x_test_ch,y_train, y_test = loader.load(\"chords_t\",composerNames)\n",
+    "x_train_ch, x_test_ch,y_train, y_test = loader.load(\"chords_t\",composerNames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "x_train_d, x_test_d,y_train, y_test = loader.load(\"durations\",composerNames)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x_train = [str([find_chord(chord) for chord in example ]) for example in x_train_ch]\n",
-    "# x_test = [str([find_chord(chord) for chord in example])for example in x_test_ch]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_train = [str([chord[0] for chord in example ]) for example in x_train_ch]\n",
@@ -245,8 +265,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# x_train = [str([find_chord(chord) for chord in example ]) for example in x_train_ch]\n",
+    "# x_test = [str([find_chord(chord) for chord in example])for example in x_test_ch]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# pitches_seq = list(itertools.chain.from_iterable(x_train_ch+x_test_ch))\n",
@@ -265,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# x_train = list(map(str, combine(x_train_ch,x_train_d,len(pitches_dict))))\n",
@@ -274,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -293,12 +329,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing model performance"
+    "# Testing different models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -308,74 +344,74 @@
       "n = 1\n",
       "train shape = (1275, 12)\n",
       "test shape = (340, 12)\n",
-      "best k = 6, best acc = 0.65\n",
+      "best k = 3, best acc = 0.6911764705882353\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=6, p=2,\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=3, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.65 \n",
+      "acc: 0.6911764705882353 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.6 \n",
+      "acc: 0.46176470588235297 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.6529411764705882 \n",
+      "acc: 0.5941176470588235 \n",
       "\n",
       "n = 2\n",
       "train shape = (1275, 156)\n",
       "test shape = (340, 156)\n",
-      "best k = 2, best acc = 0.7176470588235294\n",
+      "best k = 1, best acc = 0.6882352941176471\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=1, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.7176470588235294 \n",
+      "acc: 0.6882352941176471 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.6588235294117647 \n",
+      "acc: 0.5147058823529411 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.7323529411764705 \n",
+      "acc: 0.7 \n",
       "\n",
       "n = 3\n",
       "train shape = (1275, 1884)\n",
       "test shape = (340, 1884)\n",
-      "best k = 2, best acc = 0.7176470588235294\n",
+      "best k = 2, best acc = 0.7029411764705882\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
       "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.7176470588235294 \n",
+      "acc: 0.7029411764705882 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.7147058823529412 \n",
+      "acc: 0.5558823529411765 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.75 \n",
+      "acc: 0.7588235294117647 \n",
       "\n",
       "n = 4\n",
-      "train shape = (1275, 22598)\n",
-      "test shape = (340, 22598)\n",
-      "best k = 1, best acc = 0.7147058823529412\n",
+      "train shape = (1275, 22611)\n",
+      "test shape = (340, 22611)\n",
+      "best k = 2, best acc = 0.7058823529411765\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=1, p=2,\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.7147058823529412 \n",
+      "acc: 0.7058823529411765 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.7558823529411764 \n",
+      "acc: 0.6029411764705882 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.7852941176470588 \n",
+      "acc: 0.7647058823529411 \n",
       "\n"
      ]
     }
@@ -392,15 +428,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Training a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 4\n",
+      "train shape = (1275, 22598)\n",
+      "test shape = (340, 22598)\n",
+      "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+      "     verbose=0)\n",
+      "acc: 0.7823529411764706 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ngrams_train, ngrams_test = ngrams_vectorize(x_train, x_test,4)\n",
+    "\n",
+    "clf = svm.LinearSVC(dual=False)\n",
+    "fit(ngrams_train, y_train,ngrams_test,y_test,[clf])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Saving a model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"models/smv.dat\",\"wb+\") as f:\n",
+    "    pickle.dump(clf,f)"
+   ]
   },
   {
    "cell_type": "code",
@@ -434,6 +508,7 @@
      "height": 705
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "kX9NVmN1KtcC",
     "outputId": "b4d52e82-a7be-4c22-98a4-75f258de4d22"
    },
@@ -472,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
