--- a/Note_pitches.ipynb
+++ b/Note_pitches.ipynb
@@ -235,20 +235,8 @@
    "source": [
     "%%capture\n",
     "composerNames = [\"debussy\",\"tchaikovsky\",\"mozart\",\"victoria\",\"beethoven\"]\n",
-    "#count = min(loader.get_data_counts(composerNames))\n",
-    "x_train_ch, x_test_ch,y_train, y_test = loader.load(\"chords_t\",composerNames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "x_train_d, x_test_d,y_train, y_test = loader.load(\"durations\",composerNames)"
+    "dataset_type = \"chords_t\"\n",
+    "x_train_ch, x_test_ch,y_train, y_test = loader.load(dataset_type,composerNames)"
    ]
   },
   {
@@ -261,6 +249,18 @@
    "source": [
     "x_train = [str([chord[0] for chord in example ]) for example in x_train_ch]\n",
     "x_test = [str([chord[0] for chord in example]) for example in x_test_ch]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "x_train_d, x_test_d,y_train, y_test = loader.load(\"durations\",composerNames)"
    ]
   },
   {
@@ -547,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
